--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-static-server": "0.4.2",
-    "react-native-webview": "8.0.3",
+    "react-native-webview": ">=8.0.3",
     "react-native-zip-archive": "5.0.0",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
