--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ottofeller/epubjs-rn",
-  "version": "0.2.24",
-  "repository": "https://github.com/ottofeller/epubjs-rn",
+  "name": "@seongjoojin/epubjs-rn",
+  "version": "0.0.1",
+  "repository": "https://github.com/seongjoojin/epubjs-rn",
   "main": "./components/index.js",
   "private": false,
   "scripts": {
