--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
   },
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
+    "@babel/polyfill": "^7.8.7",
     "@lightbase/react-native-orientation": "3.2.6",
-    "@react-native-community/async-storage": "1.7.1",
+    "@react-native-community/async-storage": "^1.9.0",
     "base-64": "^0.1.0",
-    "buffer": "^5.2.1",
-    "epubjs": "^0.3.84",
-    "events": "^3.0.0",
+    "buffer": "^5.5.0",
+    "epubjs": "^0.3.85",
+    "events": "^3.1.0",
     "i": "^0.3.6",
-    "jszip": "3.2.2",
+    "jszip": "^3.3.0",
     "lodash": "^4.17.15",
     "path-webpack": "0.0.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-static-server": "0.4.2",
     "react-native-webview": ">=8.0.3",
-    "react-native-zip-archive": "5.0.0",
+    "react-native-zip-archive": "^5.0.2",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "stream-browserify": "^2.0.2",
-    "util": "^0.12.0"
+    "util": "^0.12.2"
   },
   "peerDependencies": {
     "react": "*",
@@ -44,13 +44,13 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/runtime": "^7.4.5",
+    "babel-jest": "^24.8.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-static-fs": "^1.2.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "gulp": "^4.0.2",
-    "metro-react-native-babel-preset": "^0.54.1",
-    "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.6"
   },
   "files": [
