--- a/EpubReader/package.json
+++ b/EpubReader/package.json
@@ -19,7 +19,9 @@
     "@seongjoojin/epubjs-rn": "file:./epubjs-rn.tgz",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-webview": "^9.0.2"
+    "react-native-webview": "^9.0.2",
+    "react-native-zip-archive": "^5.0.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
