--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seongjoojin/epubjs-rn",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "repository": "https://github.com/seongjoojin/epubjs-rn",
   "main": "./components/index.js",
   "private": false,
@@ -29,7 +29,7 @@
     "react-native": "0.61.5",
     "react-native-static-server": "0.4.2",
     "react-native-webview": ">=8.0.3",
-    "react-native-zip-archive": "5.0.0",
+    "react-native-zip-archive": "^5.0.2",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "stream-browserify": "^2.0.2",
